# ai-experiments

./: .env.example  .gitignore  .python-version  CLAUDE.benchmark.md  CLAUDE.md  Makefile  README.md  docker-compose.yaml  docker-compose.yaml.bak  gpu_check.py  poetry.lock.backup  pyproject.toml
.claude/: BASH_OUTPUT_STYLE.md  CLAUDE.Linux.md  CLAUDE.benchmark.md  CLAUDE.md  COMMENT_STYLE.md  DOCUMENTATION_STYLE.md  PYTHON_STYLE.md  claude.d3js-benchmark.md
.github/workflows/: hugo.yaml
OS/: README.md  pyproject.toml
OS/docs/: setup_python.md
OS/scripts/: find_pythons.sh
benchmark_tests/: .coverage  .coverage.Rico.2070153.XKrPaHOx  CLEANUP_GUIDE.md  Makefile  README.md  benchmark_runner.py  cleanup_test_artifacts.py  edge_case_test_results.json  enhanced_evaluation_demo.py  integration_test_framework_plan.md  prd-test-log_20250901_222706.txt  prd-test-log_20250901_231313.txt  prd-test-log_20250902_000107.txt  run_tests_with_cleanup.py  scoring_pattern_analysis.json  test_enhanced_evaluation.py  test_integration_full.py  test_validation_integration.py  validation_results.json  validation_system_overview.py
benchmark_tests/.claude/: CLAUDE.md
benchmark_tests/community_flags/: community_feedback.json  community_flags.json
benchmark_tests/core/: calibration_engine.py  resource_manager.py
benchmark_tests/data/community/: community_feedback.json  community_flags.json
benchmark_tests/docs/: DEPLOYMENT.md  benchmark_test_runner_overview.md  domain_coverage_audit_report.md  evaluation_system_overview.md  evaluator_architecture_flow_report.md  evaluator_requirements_specification.md  test_runner_interface.md
benchmark_tests/docs/guides/: enhanced_evaluation_usage_guide.md
benchmark_tests/docs/operations/: deployment.md  maintenance.md  monitoring.md  performance.md  scaling.md  security.md
benchmark_tests/docs/reports/: domain_evaluator_capability_analysis.md
benchmark_tests/evaluator/: __init__.py  community_flagging_system.py  community_leadership_evaluator.py  conflict_resolution_evaluator.py  consistency_validator.py  context_analyzer.py  creativity_evaluator.py  cross_cultural_coherence.py  cultural_dataset_validator.py  domain_evaluation_router.py  domain_evaluator_base.py  domain_metadata_extractor.py  ensemble_disagreement_detector.py  entropy_calculator.py  evaluation_aggregator.py  evaluation_config.py  historical_linguistics_evaluator.py  integrated_validation_system.py  integration_evaluator.py  intercultural_competence_assessor.py  knowledge_validator.py  language_evaluator.py  multilingual_code_switching_evaluator.py  open_cultural_apis.py  pragmatic_meaning_evaluator.py  quantization_tester.py  reasoning_evaluator.py  rhythmic_analyzer.py  semantic_coherence.py  social_evaluator.py  social_hierarchy_navigation_assessor.py  tradition_validator.py  validation_runner.py
benchmark_tests/expirements/: benchmark_results_analyzer.py  independent_benchmark_analyzer.py  quick_benchmark_summary.py  update_benchmark_analysis.py
benchmark_tests/scripts/: convert_core_domains_to_instruct.py
benchmark_tests/tests/: __init__.py
bios/: README.md
blog/: hugo.toml
blog/archetypes/: default.md
blog/content/: about.md  search.md
blog/public/: 404.html  index.html  index.json  index.xml  sitemap.xml
docker/: Dockerfile.cpu  Dockerfile.gpu  Dockerfile.llama-cpp  Dockerfile.llama-cpp-python  Dockerfile.llama-cpu  Dockerfile.llama-gpu  Dockerfile.llama-native-server  Dockerfile.trt-server  Dockerfile.vllm-gpu  requirements-cpu.txt
docker/comfyui-flux/: Dockerfile.comfyui-flux  entrypoint.sh
docker/llama-cpu/: Dockerfile.llama-cpu  entrypoint.sh  hugepage_mmap_wrapper.cpp
docker/llama-gpu/: Dockerfile.llama-gpu  entrypoint.sh
docs/: README.md
docs/bios/: README.md
docs/hardware/: README.md  hardware-overview.md
docs/inference/: README.md  llama-cpp-parameters.md  parameter-optimization-guide.md  vllm-parameters.md
docs/optimizations/: README.md  benchmark-guide.md  bios-optimizations.md  experimental-1gb-hugepages.md  gpu-optimizations.md  hugepages-setup.md  os-optimizations.md
docs/os/: README.md  backup_and_recovery.md  os-overview.md  pytorch_cuda_update_guide.md  storage-configuration.md  sysctl_huge_pages.md
docs/sandbox/: README.md  build_trt_image.md  docker_compose_overview.md  docker_llama_cpu_overview.md  docker_llama_gpu_overview.md  docker_vllm_gpu_overview.md  docker_vllm_overview.md
examples/: system_collector_demo.py
hardware/: README.md
prompts/: check-architecutre-benchmakr.md  evaluate-qwen-vs-gpt.txt  evaluate_base_reasoning_benchmark_results.md  generate-docs.md  run_tests.md
sandbox/: Dockerfile.gpu  docker-compose.yaml  requirements-cpu.txt  requirements-gpu.txt
sandbox/docs/: docker_cpu_overview.md
scripts/: benchmark.py
scripts/optimizations/: benchmark_hugepages.sh  hugepages-model-manager.service  manage-hugepages-models.sh  optimize-gpu.sh
scripts/setup/: setup_cuda.sh  setup_cudnn.sh  setup_sudo_user.sh  setup_terminal.sh
scripts/update/: README.md  update_cuda.sh  update_cudnn.sh  update_docker.sh  update_nvidia.sh  update_python.sh  update_security.sh  update_ubuntu.sh
scripts/utils/: check_py_deps_install.py  dependency_check.sh  download_model_hf.py  find_pythons.sh  storage_check.sh  test_linux_llama_cpu.py  test_llamaCpp_server.py  test_trt_server.py
src/: cpu_server.py  llama_cpp_server.py  rest_api_server.py  run_inference.py  trt_server.py
tests/: test_basic_reasoning.py  test_linux_easy.py  test_linux_mid.py  test_reasoning_complicated.py  test_reasoning_easy.py
tests/base_models/: README.md  run_long_context_benchmarks.py  test_base_model_reasoning_complicated.py  test_base_model_reasoning_easy.py  test_long_context_benchmarks.py
tests/benchmark_tests/: README.md  evaluation_config.py  reasoning_evaluator.py  test_runner.py
tests/concurrency/: test_concurrent_complicated.py  test_concurrent_easy.py
tests/functional_tests/: test_system_collector_functional.py
tests/instruct-models/: test_linux_easy.py
tests/unit_tests/: test_system_collector.py
(+318 files in other folders)
