# pyproject.toml

[tool.poetry]
name = "ai-toolkit"
version = "0.1.0"
description = "Base Python project for AI engineering on RTX 5090"
authors = ["Alejandro <alejandroj1234@proton.me>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13" # Ensure you have Python 3.13 installed via pyenv

# Core AI/ML Frameworks and Utilities
torch = {version = ">=2.3.0,<3.0.0", source = "pytorch_cuda_cu128"} # Add this line for torch
torchvision = {version = ">=0.18.0,<1.0.0", source = "pytorch_cuda_cu128"} # Add this line for torchvision
torchaudio = {version = ">=2.3.0,<3.0.0", source = "pytorch_cuda_cu128"} # Add this line for torchaudio
transformers = ">=4.53.0,<5.0.0"
datasets = ">=3.6.0,<4.0.0"
accelerate = ">=1.8.1,<2.0.0"
peft = ">=0.15.2,<0.16.0"
evaluate = ">=0.4.4,<0.5.0"
deepspeed = ">=0.17.1,<0.18.0"
bitsandbytes = ">=0.46.0,<0.47.0"
sentencepiece = ">=0.2.0,<0.3.0"
einops = ">=0.8.1,<0.9.0"

# Data Science & Visualization
jupyterlab = ">=4.4.3,<5.0.0"
matplotlib = ">=3.10.3,<4.0.0"
seaborn = ">=0.13.2,<0.14.0"
scikit-learn = ">=1.7.0,<2.0.0"
pandas = ">=2.3.0,<3.0.0"

# Experiment Tracking & MLOps
wandb = ">=0.20.1,<0.21.0"
mlflow = ">=3.1.1,<4.0.0"
tensorboard = ">=2.19.0,<3.0.0"

# General Utilities & Optimization
tqdm = ">=4.67.1,<5.0.0"
rich = ">=14.0.0,<15.0.0"
ray = { version = ">=2.47.1,<3.0.0", extras = ["default"] }
optuna = ">=4.4.0,<5.0.0"

# API Development
fastapi = ">=0.115.14,<0.116.0"
uvicorn = ">=0.34.3,<0.35.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Define the custom source for PyTorch
[[tool.poetry.source]]
name = "pytorch_cuda_cu128" # Give it a descriptive name
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit" 

# Your primary PyPI source (should usually be last if you have supplemental ones)
[[tool.poetry.source]]
name = "pypi"
priority = "primary"